@@ -11,6 +11,7 @@ source "$APPSDIR/system/flash_eraseall/Kconfig"
 source "$APPSDIR/system/hex2bin/Kconfig"
 source "$APPSDIR/system/i2c/Kconfig"
 source "$APPSDIR/system/inifile/Kconfig"
+source "$APPSDIR/system/netdb/Kconfig"
 source "$APPSDIR/system/nxplayer/Kconfig"
 source "$APPSDIR/system/ramtest/Kconfig"
 source "$APPSDIR/system/readline/Kconfig"
